--- a/src/Components/Styles/NavBar.css
+++ b/src/Components/Styles/NavBar.css
@@ -1,9 +1,9 @@
-.NavBar {
+.navBar {
   background-color: #201e1c;
   color: white;
   height: 77px;
   width: 100%;
-  padding-right: 20px;
+
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.4rem;
   position: fixed;
@@ -11,26 +11,67 @@
   z-index: 1;
 }
 
-.NavBar__list {
+.navBar__list {
   display: flex;
   height: 100%;
   justify-content: flex-end;
   position: relative;
   top: 10px;
+  z-index: -1;
+  padding-right: 20px;
 }
 
-.NavBar__list-li {
+.navBar__list-li {
   list-style: none;
   padding: 15px;
+  text-align: center;
 }
 
-.NavBar__list-li:hover {
+.navBar__list-li:hover {
   color: blanchedalmond;
 }
 
-.putitoContainer {
-  padding-top: 100px;
-  color: black;
-  font-size: 1rem;
-  font-weight: 300;
+.button-menu {
+  height: 77px;
+  width: 77px;
+
+  position: relative;
+  float: right;
+  display: none;
+
+  background-image: url("../../Images/panda.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 960px) {
+  .navBar .navBar__list {
+    display: none;
+  }
+
+  .button-menu {
+    display: initial;
+  }
+
+  .button-menu-clicked {
+    height: 77px;
+    width: 77px;
+
+    position: relative;
+    float: right;
+
+    background-image: url("../../Images/panda.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .navBar__list-clicked {
+    position: relative;
+    border-radius: 20px;
+    width: 200px;
+    float: right;
+    background-color: rgba(54, 54, 54, 0.863);
+  }
 }
