--- a/src/Components/Styles/Portfolio.css
+++ b/src/Components/Styles/Portfolio.css
@@ -1,5 +1,19 @@
 .portfolio {
   padding-top: 100px;
-  height: 500px;
+
   font-size: 3rem;
+  background-color: #faf8f7;
+}
+
+.portfolio div {
+  width: 350px;
+  height: 220px;
+  display: inline-block;
+
+  background-color: black;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+
+.project-1 {
 }
