--- a/src/Components/Styles/About.css
+++ b/src/Components/Styles/About.css
@@ -2,15 +2,25 @@
   padding-top: 100px;
   height: 500px;
   background-color: #faf8f7;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .about__textContainer {
   font-size: 2rem;
-  margin-left: 30px;
+  margin: 0px 30px;
+  width: 65%;
 }
 
 .about__textContainer button {
   padding: 10px 20px;
   position: relative;
   top: 20px;
+}
+
+@media screen and (max-width: 550px) {
+  .about__textContainer {
+    font-size: 1.5rem;
+  }
 }
