--- a/src/Components/Styles/Portfolio.css
+++ b/src/Components/Styles/Portfolio.css
@@ -1,19 +1,44 @@
 .portfolio {
   padding-top: 100px;
+  width: 100%;
 
-  font-size: 3rem;
+  font-size: 2rem;
   background-color: #faf8f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.text__container {
+  width: 70%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.project__container {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.portfolio div {
-  width: 350px;
-  height: 220px;
+.project__container div {
+  width: 300px;
+
+  height: 200px;
+
   display: inline-block;
 
-  background-color: black;
+  background-color: rgb(80, 126, 148);
   margin-left: 20px;
   margin-top: 30px;
 }
 
-.project-1 {
+@media screen and (max-width: 550px) {
+  .text__container {
+    font-size: 1.5rem;
+  }
+
+  .skills__iconContainer div {
+    margin: 30px 20px;
+  }
 }
