--- a/src/Components/Styles/Skills.css
+++ b/src/Components/Styles/Skills.css
@@ -1,27 +1,40 @@
 .skills {
   background-color: #faf8f7;
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .skills__textContainer {
-  margin-left: 40px;
+  text-align: center;
   font-size: 2rem;
+  padding-bottom: 30px;
 }
 
 .skills__iconContainer {
   padding-top: 30px;
+
+  width: 70%;
+
+  position: relative;
+
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .skills__iconContainer div {
   width: 120px;
   height: 120px;
-  display: inline-block;
 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  margin-left: 50px;
-  margin-top: 30px;
+  margin: 30px 40px;
 }
 
 .skills__iconContainer .html {
@@ -50,7 +63,7 @@
   background-image: url("../../Images/npm.png");
 
   position: relative;
-  top: -25px;
+  top: ;
 }
 
 .skills__iconContainer .git {
@@ -79,5 +92,17 @@
   background-image: url("../../Images/mysql.png");
 
   position: relative;
-  top: -30px;
+  top: ;
+}
+
+@media screen and (max-width: 550px) {
+  .skills__textContainer {
+    font-size: 1.5rem;
+  }
+  .skills__iconContainer {
+  }
+
+  .skills__iconContainer div {
+    margin: 30px 20px;
+  }
 }
