--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -37,16 +37,22 @@ h2 {
 }
 
 @media screen and (max-width: 1024px) {
+  .home {
+    justify-content: center;
+    align-items: center;
+  }
+
   .home__textContainer {
     color: #faf8f7;
     text-shadow: 1.5px 1.5px rgb(29, 29, 29);
-    width: 400px;
 
+    width: 400px;
     height: 200px;
     position: relative;
-    left: 50px;
+    left: 0;
+    bottom: ;
 
-    background-color: rgba(70, 70, 71, 0.418);
+    background-color: #2f2d2ad8;
     border-radius: 17px;
 
     display: flex;
@@ -59,20 +65,8 @@ h2 {
 
 @media screen and (max-width: 500px) {
   .home__textContainer {
-    color: #faf8f7;
-    text-shadow: 1.5px 1.5px rgb(29, 29, 29);
-    width: 200px;
-
+    width: 300px;
     height: 150px;
-    position: relative;
-    left: 20px;
-
-    background-color: rgba(70, 70, 71, 0.719);
-    border-radius: 17px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
     font-size: 1rem;
   }
