Improvement on closing modals function

--- a/src/Components/Styles/NavBar.css
+++ b/src/Components/Styles/NavBar.css
@@ -44,7 +44,7 @@
 
 .navBar__list-li:hover {
   color: blanchedalmond;
-  background-color: #2f2d2a;
+  background-color: #3b3935;
   background-color: ;
 }
 
