--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -46,14 +46,13 @@ h2 {
     color: #faf8f7;
     text-shadow: 1.5px 1.5px rgb(29, 29, 29);
 
-    width: 400px;
+    width: 100vw;
     height: 200px;
     position: relative;
     left: 0;
-    bottom: ;
+    top: 200px;
 
-    background-color: #2f2d2ad8;
-    border-radius: 17px;
+    border-radius: 0;
 
     display: flex;
     flex-direction: column;
@@ -65,7 +64,6 @@ h2 {
 
 @media screen and (max-width: 500px) {
   .home__textContainer {
-    width: 300px;
     height: 150px;
 
     font-size: 1rem;
