--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -77,7 +77,7 @@
 
 .modal__project-image {
   width: 100%;
-  height: 700px;
+  height: 500px;
 
   display: block;
 
@@ -85,6 +85,7 @@
 
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .modal__text-container {
@@ -114,26 +115,57 @@
   display: inline-block;
 }
 .gitHub__project-link {
-  background-image: url("../../Images/GitHubLogo.png");
+  background-image: url("../../Images/GitHubLogo-min.png");
 
   float: left;
 }
+.gitHub__project-link a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 .project-link {
-  background-image: url("../../Images/GitHubLogo.png");
+  background-color: #53a5e4;
+  width: 220px;
+  height: 68px;
 
+  border-radius: 10px;
+
+  margin-top: 20px;
   float: right;
 }
+.project-link a {
+  color: black;
+  text-decoration: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+}
+
+.project-link a .modal__button_text {
+  font-size: 25px;
+  font-weight: 700;
+}
 .mobile-first {
-  background-image: url("../../Images/mobile-first.png");
+  background-image: url("../../Images/mobile-first-min.png");
 }
 .space-man {
-  background-image: url("../../Images/space-man.png");
+  background-image: url("../../Images/space-man-min.png");
+}
+
+.rick-and-morty {
+  background-image: url("../../Images/rick-and-morty.png");
+  background-position: bottom;
 }
 
 @media screen and (max-width: 1024px) {
   .modal__project-image {
     width: 100%;
-    height: 400px;
+    height: 440px;
 
     background-position: center;
     background-repeat: no-repeat;
@@ -166,7 +198,7 @@
 @media screen and (max-width: 500px) {
   .modal__project-image {
     width: 100%;
-    height: 200px;
+    height: 220px;
 
     background-position: center;
     background-repeat: no-repeat;
