--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -158,7 +158,7 @@
 }
 
 .rick-and-morty {
-  background-image: url("../../Images/rick-and-morty.png");
+  background-image: url("../../Images/rick-and-morty-3.png");
   background-position: bottom;
 }
 
