--- a/src/Components/Styles/About.css
+++ b/src/Components/Styles/About.css
@@ -1,6 +1,6 @@
 .about {
   padding-top: 100px;
-  height: 500px;
+
   background-color: #faf8f7;
   display: flex;
   justify-content: center;
@@ -15,6 +15,7 @@
 
 .about__textContainer p {
   margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 .download-button {
@@ -24,6 +25,7 @@
   height: 60px;
 
   margin-left: calc(50% - 100px);
+  margin-top: 50px;
 
   display: flex;
 
@@ -33,6 +35,7 @@
   top: 20px;
   background-color: #53a5e4;
   border-radius: 10px;
+
   /* box-shadow: 1px 1px rgb(12, 12, 12); */
 }
 
