--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -15,7 +15,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  background-image: ;
+  transform-origin: center left;
+  transition: all 0.7s;
+  transition: translateX, 0.7s;
 }
 
 .project a {
@@ -23,8 +25,13 @@
   width: 100%;
   display: block;
 }
-.project a:hover {
+.project:hover {
   cursor: pointer;
+  transform: scale(1.3);
+}
+.project:hover ~ .project {
+  cursor: pointer;
+  transform: translateX(80px);
 }
 
 /*modal*/
