--- a/src/Components/Styles/About.css
+++ b/src/Components/Styles/About.css
@@ -1,9 +1,10 @@
 .about {
-  padding-top: 100px;
+  height: 100vh;
 
   background-color: #faf8f7;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -35,6 +36,7 @@
   top: 20px;
   background-color: #53a5e4;
   border-radius: 10px;
+  border: solid black 1px;
 
   /* box-shadow: 1px 1px rgb(12, 12, 12); */
 }
@@ -68,7 +70,17 @@
 
   display: inline-block;
 }
-
+@media screen and (max-width: 1024px) {
+  .about {
+    margin-bottom: 200px;
+    margin-top: 100px;
+  }
+}
+@media screen and (max-width: 857px) {
+  .about {
+    margin-bottom: 400px;
+  }
+}
 @media screen and (max-width: 550px) {
   .about__textContainer {
     font-size: 1.5rem;
