--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -8,7 +8,14 @@
   justify-content: center;
 
   background-color: #faf8f7;
-  background-image: url("../../Images/code.png");
+  background-image: linear-gradient(
+    to bottom,
+    #1d3363,
+    #4c3c74,
+    #78437f,
+    #a14a82,
+    #c7547d
+  );
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -16,17 +23,19 @@
 
 .home__textContainer {
   color: #faf8f7;
-  text-shadow: 1.5px 1.5px rgb(29, 29, 29);
+  text-shadow: 1.5px 1.5px rgb(53, 53, 53);
   width: 600px;
+  height: 150px;
+  border-radius: 20px;
 
-  height: 200px;
   position: relative;
-  left: 80px;
+  top: 0px;
+  left: 15.7vw;
 
-  background-color: rgba(139, 141, 144, 0.191);
-  border-radius: 17px;
+  /* background-color: #03020a38; */
 
   display: flex;
+
   flex-direction: column;
   justify-content: center;
 }
@@ -34,32 +43,13 @@
 .home__textContainer h1,
 h2 {
   padding-left: 30px;
+  font-size: 4rem;
+  font-family: "Cabin", sans-serif;
+  /* font-family: "Noto Sans JP", sans-serif; */
 }
 
-@media screen and (max-width: 1024px) {
-  .home {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .home__textContainer {
-    color: #faf8f7;
-    text-shadow: 1.5px 1.5px rgb(29, 29, 29);
-
-    width: 100vw;
-    height: 200px;
-    position: relative;
-    left: 0;
-    top: 200px;
-
-    border-radius: 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    font-size: 1.5rem;
-  }
+.home__textContainer h2 {
+  font-size: 3rem;
 }
 
 @media screen and (max-width: 500px) {
