--- a/src/Pages/Styles/App.css
+++ b/src/Pages/Styles/App.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Cabin:wght@700&family=Noto+Sans+JP:wght@700&family=Rubik:wght@700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+}
+
+html {
+  background-color: #faf8f7;
 }
