--- a/src/Components/Styles/About.css
+++ b/src/Components/Styles/About.css
@@ -1,6 +1,6 @@
 .about {
-  height: 100vh;
-
+  margin-top: 200px;
+  padding-top: 100px;
   background-color: #faf8f7;
   display: flex;
   justify-content: center;
@@ -70,9 +70,9 @@
 
   display: inline-block;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1142px) {
   .about {
-    margin-bottom: 200px;
+    margin-bottom: 100px;
     margin-top: 100px;
   }
 }
@@ -81,7 +81,10 @@
     margin-bottom: 400px;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 571px) {
+  .about {
+    margin-bottom: 400px;
+  }
   .about__textContainer {
     font-size: 1.5rem;
   }
