--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -1,5 +1,4 @@
 .home {
-  margin-top: px;
   height: 100vh;
   width: 100%;
   font-size: 2rem;
@@ -7,7 +6,6 @@
   flex-direction: column;
   justify-content: center;
 
-  background-color: #faf8f7;
   background-image: linear-gradient(
     to bottom,
     #1d3363,
@@ -16,23 +14,18 @@
     #a14a82,
     #c7547d
   );
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
 }
 
 .home__textContainer {
   color: #faf8f7;
   text-shadow: 1.5px 1.5px rgb(53, 53, 53);
-  width: 600px;
-  height: 150px;
+
   border-radius: 20px;
 
   position: relative;
   top: 0px;
   left: 15.7vw;
-
-  /* background-color: #03020a38; */
+  width: 500px;
 
   display: flex;
 
@@ -51,7 +44,10 @@ h2 {
 .home__textContainer h2 {
   font-size: 3rem;
 }
-
+@media screen and (max-width: 1024) {
+  .home__textContainer {
+  }
+}
 @media screen and (max-width: 500px) {
   .home__textContainer {
     height: 150px;
