--- a/src/Components/Styles/Skills.css
+++ b/src/Components/Styles/Skills.css
@@ -1,7 +1,8 @@
 .skills {
-  height: 100vh;
   background-color: #faf8f7;
 
+  margin-top: 200px;
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -101,7 +102,7 @@
     margin-bottom: 200px;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 571px) {
   .skills__textContainer {
     font-size: 1.5rem;
   }
