--- a/src/Pages/Styles/Portfolio.css
+++ b/src/Pages/Styles/Portfolio.css
@@ -1,14 +1,14 @@
 .portfolio {
+  margin-top: 200px;
   padding-top: 100px;
+  padding-bottom: 400px;
   width: 100%;
-  height: ;
 
   font-size: 2rem;
   background-color: #faf8f7;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 100px;
 }
 .text__container {
   width: 70%;
