--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -33,9 +33,7 @@
   justify-content: center;
 }
 
-.home__textContainer h1,
-h2 {
-  padding-left: 30px;
+.home__textContainer h1 {
   font-size: 4rem;
   font-family: "Cabin", sans-serif;
   /* font-family: "Noto Sans JP", sans-serif; */
@@ -44,14 +42,43 @@ h2 {
 .home__textContainer h2 {
   font-size: 3rem;
 }
-@media screen and (max-width: 1024) {
+@media screen and (max-width: 1024px) {
+  .home {
+    align-items: center;
+  }
   .home__textContainer {
+    left: 0;
+  }
+}
+@media screen and (max-width: 700px) {
+  .home {
+    align-items: center;
+  }
+  .home__textContainer {
+    font-size: 1rem;
+    width: 400px;
+    left: 0;
+  }
+  .home__textContainer h1 {
+    font-size: 3rem;
+  }
+  .home__textContainer h2 {
+    font-size: 2.5rem;
   }
 }
 @media screen and (max-width: 500px) {
+  .home {
+    align-items: center;
+  }
   .home__textContainer {
-    height: 150px;
-
     font-size: 1rem;
+    width: 250px;
+    left: 0;
+  }
+  .home__textContainer h1 {
+    font-size: 3rem;
+  }
+  .home__textContainer h2 {
+    font-size: 2rem;
   }
 }
