--- a/src/Components/Styles/NavBar.css
+++ b/src/Components/Styles/NavBar.css
@@ -62,7 +62,7 @@
   top: 20px;
   right: 20px;
 
-  background-image: url("../../Images/Icons/clipart365828.png");
+  background-image: url("../../Images/menu.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -110,7 +110,7 @@
     width: 100vw;
     height: 100vh;
     float: right;
-    background-color: #2f2d2a;
+    background-color: #2f2d2adf;
   }
 
   .navBar__list-clicked li {
