--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -1,23 +1,25 @@
-.project {
+.project-container {
+  overflow: hidden;
   width: 300px;
-
   height: 200px;
 
-  display: inline-block;
-
-  background-color: rgb(80, 126, 148);
   margin-left: 20px;
   margin-top: 30px;
 
   border: solid black 2px;
+}
+.project {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
 
+  background-color: rgb(80, 126, 148);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  transform-origin: center left;
+  transform-origin: center;
   transition: all 0.7s;
-  transition: translateX, 0.7s;
 }
 
 .project a {
@@ -25,13 +27,14 @@
   width: 100%;
   display: block;
 }
+
 .project:hover {
   cursor: pointer;
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 .project:hover ~ .project {
-  cursor: pointer;
-  transform: translateX(80px);
+  /* cursor: pointer;
+  transform: translateX(80px); */
 }
 
 /*modal*/
@@ -155,7 +158,8 @@
   display: block;
 }
 .project-link {
-  background-color: #415daa;
+  background-color: #2c4fad;
+
   width: 220px;
   height: 68px;
 
@@ -166,10 +170,10 @@
   float: right;
 }
 .project-link:hover {
-  background-color: #2c4fad;
+  background-color: #2855c7;
 }
 .project-link a {
-  color: black;
+  color: white;
   text-decoration: none;
 
   display: flex;
@@ -182,7 +186,7 @@
 
 .project-link a .modal__button_text {
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 300;
 }
 .mobile-first {
   background-image: url("../../Images/mobile-first-min.png");
