--- a/src/Components/Styles/Skills.css
+++ b/src/Components/Styles/Skills.css
@@ -66,7 +66,7 @@
   background-image: url("../../Images/npm-min.png");
 
   position: relative;
-  top: ;
+  top: 40px;
 }
 
 .skills__iconContainer .git {
@@ -89,12 +89,9 @@
   background-image: url("../../Images/Terminalicon-min.png");
 }
 
-.skills__iconContainer .mysql {
-  height: 63px;
+.skills__iconContainer .postgres {
+  background-image: url("../../Images/postgres.png");
 
-  background-image: url("../../Images/mysql-min.png");
-
-  position: relative;
   top: ;
 }
 @media screen and (max-width: 1024px) {
