lowe font-size on modal for media 500

--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -247,4 +247,8 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .modal__text-container {
+    font-size: 1.3rem;
+  }
 }
