--- a/src/Components/Styles/Project.css
+++ b/src/Components/Styles/Project.css
@@ -22,19 +22,18 @@
   transition: all 0.7s;
 }
 
-.project a {
+.project button {
+  background-color: transparent;
   height: 100%;
   width: 100%;
   display: block;
+  border: none;
+  cursor: pointer;
 }
 
 .project:hover {
   cursor: pointer;
   transform: scale(1.1);
-}
-.project:hover ~ .project {
-  /* cursor: pointer;
-  transform: translateX(80px); */
 }
 
 /*modal*/
@@ -49,16 +48,15 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  transform-origin: ;
+  background-color: rgba(0, 0, 0, 0.65); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-  margin: 8% auto; /* 15% from the top and centered */
+  margin: 8% auto;
   background-color: #faf8f7;
   border: 1px solid #888;
-  width: 70%; /* Could be more or less, depending on screen size */
+  width: 70%;
 }
 
 .modal-content__flex {
@@ -158,7 +156,7 @@
   display: block;
 }
 .project-link {
-  background-color: #2c4fad;
+  background-color: #1b1a1a;
 
   width: 220px;
   height: 68px;
@@ -170,7 +168,8 @@
   float: right;
 }
 .project-link:hover {
-  background-color: #2855c7;
+  background-color: black;
+  cursor: pointer;
 }
 .project-link a {
   color: white;
@@ -191,8 +190,9 @@
 .mobile-first {
   background-image: url("../../Images/mobile-first-min.png");
 }
-.space-man {
-  background-image: url("../../Images/space-man-min.png");
+.jap {
+  background-image: url("../../Images/jap.png");
+  background-size: contain;
 }
 
 .rick-and-morty {
@@ -216,11 +216,11 @@
   }
 
   .modal-content {
-    margin: 8% auto; /* 15% from the top and centered */
+    margin: 8% auto;
     margin-top: 100px;
     background-color: #faf8f7;
     border: 1px solid #888;
-    width: 90%; /* Could be more or less, depending on screen size */
+    width: 90%;
   }
 }
 
