--- a/src/Components/HomeV/Home.css
+++ b/src/Components/HomeV/Home.css
@@ -25,7 +25,7 @@
   );
 }
 .home-container {
-  margin-left: 100px;
+  margin-left: 150px;
   margin-bottom: 150px;
 }
 .home__textContainer {
@@ -37,7 +37,7 @@
   width: 500px;
 
   display: inline-block;
-  margin-left: 70px;
+  margin-left: 50px;
   position: relative;
   bottom: 20px;
 }
@@ -56,15 +56,25 @@
 }
 .img-container img {
   display: block;
-  width: 280px;
-  border-radius: 20%;
+  width: 250px;
+  border-radius: 40%;
+  border: solid 2px black;
 }
-
-@media screen and (max-width: 1650px) {
+@media screen and (max-width: 1650px) and (max-height: 750px) {
+  .home-container {
+    margin-bottom: 80px;
+  }
   .img-container img {
-    width: 250px;
+    width: 200px;
+  }
+  .home__textContainer h1 {
+    font-size: 3.5rem;
+  }
+  .home__textContainer h2 {
+    font-size: 2.8rem;
   }
 }
+
 @media screen and (max-width: 1300px) {
   .img-container img {
     width: 200px;
@@ -73,7 +83,7 @@
     font-size: 3.5rem;
   }
   .home__textContainer h2 {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 }
 @media screen and (max-width: 1024px) {
