--- a/src/Components/HomeV/Home.css
+++ b/src/Components/HomeV/Home.css
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: row;
 
-  justify-content: start;
-  align-items: end;
+  justify-content: center;
+  align-items: center;
 
   background-image: linear-gradient(
     to bottom,
@@ -24,10 +24,7 @@
     #75375a
   );
 }
-.home-container {
-  margin-left: 150px;
-  margin-bottom: 150px;
-}
+
 .home__textContainer {
   color: #faf8f7;
   text-shadow: 1.5px 1.5px rgb(53, 53, 53);
@@ -39,7 +36,7 @@
   display: inline-block;
   margin-left: 50px;
   position: relative;
-  bottom: 20px;
+  bottom: 10px;
 }
 
 .home__textContainer h1 {
@@ -57,13 +54,8 @@
 .img-container img {
   display: block;
   width: 250px;
-  border-radius: 40%;
-  border: solid 2px black;
 }
 @media screen and (max-width: 1650px) and (max-height: 750px) {
-  .home-container {
-    margin-bottom: 80px;
-  }
   .img-container img {
     width: 200px;
   }
@@ -86,19 +78,8 @@
     font-size: 2.8rem;
   }
 }
-@media screen and (max-width: 1024px) {
-  .home {
-    align-items: end;
-    justify-content: center;
-  }
-  .home-container {
-    margin-left: 0pc;
-  }
-}
+
 @media screen and (max-width: 880px) {
-  .home {
-    align-items: center;
-  }
   .home__textContainer {
     font-size: 1rem;
     width: 400px;
@@ -110,8 +91,17 @@
   .home__textContainer h2 {
     font-size: 2.5rem;
   }
-  .img-container {
-    display: none;
+}
+@media screen and (max-width: 700px) {
+  .home-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home-container .img-container {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 60px;
   }
 }
 @media screen and (max-width: 500px) {
