--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -46,7 +46,7 @@
 
 .navBar__list-li:hover {
   color: rgb(255, 255, 255);
-  background-color: #1d336e93;
+  background-color: #2e3f6e52;
   border-radius: 10px;
   border: solid 1px black;
 }
@@ -94,6 +94,23 @@
   display: block;
 }
 
+@keyframes scale-in-top {
+  0% {
+    transform: scale(0);
+    transform-origin: 50% 0;
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 0;
+    opacity: 1;
+  }
+}
+
+.scale-in-top {
+  animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
 @media screen and (max-width: 1024px) {
   .navBar .navBar__list {
     display: none;
@@ -105,7 +122,6 @@
 
   .navBar__list-clicked {
     position: relative;
-
     border-radius: 0px;
     width: 100vw;
     height: 100vh;
