--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -121,11 +121,12 @@
   }
 
   .navBar__list-clicked {
-    position: relative;
+    position: absolute;
     border-radius: 0px;
     width: 100vw;
     height: 100vh;
-    float: right;
+
+    margin-top: 77px;
     background-color: #2f2d2ae1;
   }
 
